add code to query FastAPI hosted on AWS

--- a/MLhousingPrices/resources/demo.ipynb
+++ b/MLhousingPrices/resources/demo.ipynb
@@ -5,17 +5,105 @@
    "metadata": {},
    "source": [
     "# Demo of the package\n",
-    "This notebook shows how to use the classes in the package to predict outputs and train models."
+    "This notebook shows how to query the FastAPI endpoints to get the predictions and the train information, and explains how to use the classes in the package to predict outputs and train models."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from MLhousingPrices import preprocessor, model"
+    "from MLhousingPrices import preprocessor, model\n",
+    "import requests\n",
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Query the FastAPI endpoints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'http://mlhousingprices-env.eba-6pnj2kdx.eu-north-1.elasticbeanstalk.com/predict'\n",
+    "with open(\"data/housing.csv\", \"rb\") as df:\n",
+    "    response = requests.post(url, files={'file': df})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1        408180.12572431285\n",
+       "2         424124.7348245764\n",
+       "3         378507.6230482403\n",
+       "4         320968.1057896144\n",
+       "5          255738.426234534\n",
+       "                ...        \n",
+       "20636      32045.4956124234\n",
+       "20637    57174.755839897785\n",
+       "20638     40392.86752809677\n",
+       "20639     50904.32638045214\n",
+       "20640     67484.64608482411\n",
+       "Name: predictions, Length: 20640, dtype: object"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "decoded_content = response.content.decode('utf-8')\n",
+    "cr = csv.reader(decoded_content.splitlines(), delimiter=',')\n",
+    "df = pd.DataFrame(list(cr))\n",
+    "df.columns = df.iloc[0]\n",
+    "df = df.drop(0)\n",
+    "df.predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelType = 'knn'\n",
+    "url = 'http://mlhousingprices-env.eba-6pnj2kdx.eu-north-1.elasticbeanstalk.com/train?modelType=' + modelType\n",
+    "with open(\"data/housing.csv\", \"rb\") as df:\n",
+    "    response = requests.post(url, files={'file': df})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'{\"Best R2 score\":0.766671650982153,\"Best params\":{\"n_neighbors\":10,\"weights\":\"distance\"}}'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.content"
    ]
   },
   {
@@ -200,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +412,7 @@
        "4683                               0.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -370,10 +458,10 @@
     {
      "data": {
       "text/plain": [
-       "<MLhousingPrices.model.ModelTrainer at 0x2a2b4a25eb0>"
+       "<MLhousingPrices.model.ModelTrainer at 0x27110b9b9e0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +482,7 @@
        "np.float64(0.7666677612418966)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +502,7 @@
        "{'n_neighbors': 10, 'weights': 'distance'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,11 +513,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mt.save"
+    "mt.save(\"01\")"
    ]
   }
  ],
